--- a/Pacemaker/app/src/main/res/drawable-anydpi/rvexerciseitem_img_dm_delete.xml
+++ b/Pacemaker/app/src/main/res/drawable-anydpi/rvexerciseitem_img_dm_delete.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
+    android:tint="#444646"
     android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M3,18h6v-2L3,16v2zM3,6v2h18L21,6L3,6zM3,13h12v-2L3,11v2z"/>
+      android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V7H6v12zM19,4h-3.5l-1,-1h-5l-1,1H5v2h14V4z"/>
 </vector>
